--- a/PlutoWallet/Components/NetworkSelect/MultiNetworkSelectOptionView.xaml
+++ b/PlutoWallet/Components/NetworkSelect/MultiNetworkSelectOptionView.xaml
@@ -12,7 +12,7 @@
             <AbsoluteLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
                     AbsoluteLayout.LayoutFlags="All">
 
-                <HorizontalStackLayout Spacing="2" x:Name="horizontalStackLayout">
+                <HorizontalStackLayout Spacing="2">
                     <networkselect:NetworkBubbleView x:Name="bubble1" IsVisible="false" ShowName="True"
                                                      HorizontalOptions="Start"/>
 
@@ -25,10 +25,11 @@
                     <networkselect:NetworkBubbleView x:Name="bubble4" IsVisible="false"
                                                      HorizontalOptions="End"/>
                 </HorizontalStackLayout>
-                <BoxView Opacity="0"
-                    AbsoluteLayout.LayoutBounds="0, 0, 1, 1"
-                    AbsoluteLayout.LayoutFlags="SizeProportional"
-                    x:Name="tapGestureView" />
+                <BoxView BackgroundColor="#00000000"
+                        AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
+                         AbsoluteLayout.LayoutFlags="All"
+                        x:Name="tapGestureView"
+                        Opacity="0"/>
 
             </AbsoluteLayout>
             
