--- a/PlutoWallet/Components/Staking/StakingDashboardView.xaml
+++ b/PlutoWallet/Components/Staking/StakingDashboardView.xaml
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:staking="clr-namespace:PlutoWallet.Components.Staking"
+             xmlns:switch="clr-namespace:PlutoWallet.Components.Switch"
              x:Class="PlutoWallet.Components.Staking.StakingDashboardView"
-             HeightRequest="{Binding Source={x:Reference view}, Path=HeightRequest}"
+             HeightRequest="{Binding HeightRequest}"
              >
     <Frame BackgroundColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
            BorderColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
@@ -12,7 +12,25 @@
            Padding="10, 0, 10, 0"
            >
         <AbsoluteLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All">
-            <staking:StakingEntryView x:Name="view" />
+            <VerticalStackLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
+                    AbsoluteLayout.LayoutFlags="All">
+                <Label 
+                    Text="Staking"
+                    FontAttributes="Bold"
+                    HorizontalOptions="Center"
+                    HeightRequest="25"
+                    VerticalTextAlignment="Center"/>
+            
+                <ContentView Content="{Binding Content}">
+                    
+                </ContentView>
+           </VerticalStackLayout>
+
+           <switch:MiniDualSwitch FirstOption="Easy" SecondOption="Pro"
+                                   AbsoluteLayout.LayoutBounds="1, 0, 100, 20"
+                                   AbsoluteLayout.LayoutFlags="PositionProportional"
+                                   Margin="0, 5, 0, 0"
+                                   x:Name="easyProSwitch"/>
         </AbsoluteLayout>
     </Frame>
 </ContentView>
