--- a/PlutoWallet/Components/Staking/StakingEntryView.xaml
+++ b/PlutoWallet/Components/Staking/StakingEntryView.xaml
@@ -6,57 +6,38 @@
              x:Class="PlutoWallet.Components.Staking.StakingEntryView"
              AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
              AbsoluteLayout.LayoutFlags="All"
-             HeightRequest="95">
-    <AbsoluteLayout HorizontalOptions="CenterAndExpand">
-        <VerticalStackLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
-                    AbsoluteLayout.LayoutFlags="All">
-            <Label 
-                Text="Staking"
-                FontAttributes="Bold"
-                HorizontalOptions="Center"
-                HeightRequest="25"
-                VerticalTextAlignment="Center"/>
+             HeightRequest="60">
+    <VerticalStackLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
+                AbsoluteLayout.LayoutFlags="All">
             
-            <AbsoluteLayout HorizontalOptions="CenterAndExpand" HeightRequest="60"
-                            x:Name="easyStaking">
-                <VerticalStackLayout AbsoluteLayout.LayoutBounds="0, 0, 1, 1"
-                                     AbsoluteLayout.LayoutFlags="SizeProportional"
-                                     Spacing="0">
-                    <HorizontalStackLayout>
-                        <Label 
-                            Text="GLG stakers"
-                            FontAttributes="Bold"
-                            FontSize="24"/>
-                        <Image Source="{AppThemeBinding Light=infoblack.png, Dark=infowhite.png}" 
-                               VerticalOptions="Center"
-                               Margin="5, 0, 0, 0"
-                               HeightRequest="15" WidthRequest="15"/>
-                    </HorizontalStackLayout>
+        <AbsoluteLayout HorizontalOptions="CenterAndExpand" HeightRequest="60"
+                        x:Name="easyStaking">
+            <VerticalStackLayout AbsoluteLayout.LayoutBounds="0, 0, 1, 1"
+                                    AbsoluteLayout.LayoutFlags="SizeProportional"
+                                    Spacing="0">
+                <HorizontalStackLayout>
                     <Label 
-                        Text="Commission: 10%" TextColor="#888" />
-                </VerticalStackLayout>
+                        Text="GLG stakers"
+                        FontAttributes="Bold"
+                        FontSize="24"/>
+                    <Image Source="{AppThemeBinding Light=infoblack.png, Dark=infowhite.png}" 
+                            VerticalOptions="Center"
+                            Margin="5, 0, 0, 0"
+                            HeightRequest="15" WidthRequest="15"/>
+                </HorizontalStackLayout>
+                <Label 
+                    Text="Commission: 10%" TextColor="#888" />
+            </VerticalStackLayout>
             
-                <Button AbsoluteLayout.LayoutBounds="1, 0.5, AutoSize, AutoSize"
-                        AbsoluteLayout.LayoutFlags="PositionProportional"
-                        Text="Stake"
-                        Clicked="OnStakeClicked"/>
-            </AbsoluteLayout>
-            <webview:AdvancedWebView HeightRequest="600"
-                                     Address="https://staking.polkadot.network/#/overview"
-                                     x:Name="proStaking"
-                                     IsVisible="False" />
-       </VerticalStackLayout>
-
-       <switch:MiniDualSwitch FirstOption="Easy" SecondOption="Pro"
-                               AbsoluteLayout.LayoutBounds="1, 0, 100, 20"
-                               AbsoluteLayout.LayoutFlags="PositionProportional"
-                               Margin="0, 5, 0, 0"
-                               x:Name="easyProSwitch"/>
-
-        <AbsoluteLayout.GestureRecognizers>
+            <Button AbsoluteLayout.LayoutBounds="1, 0.5, AutoSize, AutoSize"
+                    AbsoluteLayout.LayoutFlags="PositionProportional"
+                    Text="Stake"
+                    Clicked="OnStakeClicked"/>
+        </AbsoluteLayout>
+        <VerticalStackLayout.GestureRecognizers>
             <TapGestureRecognizer Tapped="OnInfoClicked" />
 
-        </AbsoluteLayout.GestureRecognizers>
-    </AbsoluteLayout>
+        </VerticalStackLayout.GestureRecognizers>
+    </VerticalStackLayout>
 </ContentView>
 
