--- a/PlutoWallet/Components/WebView/AdvancedWebView.xaml
+++ b/PlutoWallet/Components/WebView/AdvancedWebView.xaml
@@ -2,7 +2,9 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PlutoWallet.Components.WebView.AdvancedWebView"
-             x:Name="view">
+             x:Name="view"
+             HeightRequest="600"
+             BackgroundColor="#444444">
     <WebView HeightRequest="600" WidthRequest="{Binding Source={x:Reference view}, Path=Width}"
              x:Name="webView"/>
 </ContentView>
