--- a/PlutoWallet/View/BasePage.xaml
+++ b/PlutoWallet/View/BasePage.xaml
@@ -1,76 +1,32 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             x:Class="PlutoWallet.View.BasePage"
+             Title="Base page"
              xmlns:networkselect="clr-namespace:PlutoWallet.Components.NetworkSelect"
-             xmlns:addressview="clr-namespace:PlutoWallet.Components.AddressView"
              xmlns:transferview="clr-namespace:PlutoWallet.Components.TransferView"
              xmlns:connectionrequestview="clr-namespace:PlutoWallet.Components.ConnectionRequestView"
              xmlns:universalscannerview="clr-namespace:PlutoWallet.Components.UniversalScannerView"
              xmlns:messagepopup="clr-namespace:PlutoWallet.Components.MessagePopup"
              xmlns:transactionrequest="clr-namespace:PlutoWallet.Components.TransactionRequest"
-             xmlns:calamar="clr-namespace:PlutoWallet.Components.CalamarView"
-             xmlns:balance="clr-namespace:PlutoWallet.Components.Balance"
              xmlns:publickeyqrcodeview="clr-namespace:PlutoWallet.Components.PublicKeyQRCodeView"
-             xmlns:dappconnectionview="clr-namespace:PlutoWallet.Components.DAppConnectionView"
              xmlns:staking="clr-namespace:PlutoWallet.Components.Staking"
-             xmlns:extrinsic="clr-namespace:PlutoWallet.Components.Extrinsic"
              xmlns:navigationbar="clr-namespace:PlutoWallet.Components.NavigationBar"
-             x:Class="PlutoWallet.View.MainPage"
-             Title="Main page"
              BackgroundColor="Black">
 
     <AbsoluteLayout
          AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All">
         <Image AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All"
                Source="space.png" Aspect="AspectFill"/>
-        <ScrollView
-            AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All">
+        <ContentView AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All"
+                     Content="{Binding Content}">
+            <!-- other pages here -->
 
-            <VerticalStackLayout
-                Spacing="15"
-                Padding="30,0">
-
-                <BoxView Opacity="0"
-                         HeightRequest="50" />
-
-                <dappconnectionview:DAppConnectionView />
-
-                <balance:UsdBalanceView />
-
-                <addressview:AddressView
-                    Title="Public key"
-                    Address="{Binding PublicKey}"/>
-
-                <addressview:AddressView
-                    Title="Substrate key"
-                    Address="{Binding SubstrateKey}"/>
-
-                <addressview:ChainAddressView />
-
-                <balance:BalanceView />
-
-                <extrinsic:ExtrinsicStatusView
-                    ExtrinsicId="0015001148-000001-0e737"
-                    Status="Pending" />
-                <extrinsic:ExtrinsicStatusView
-                    ExtrinsicId="0015001148-000001-0e736"
-                    Status="Success" />
-                <extrinsic:ExtrinsicStatusView
-                    ExtrinsicId="0015001148-000001-0e735"
-                    Status="Failed" />
-
-                <staking:StakingDashboardView />
-
-               <calamar:CalamarView Address="{Binding PublicKey}"/>
-
-                <!-- Just a clear space (needs to be here) -->
-                <AbsoluteLayout HeightRequest="200" WidthRequest="1000"/>
-            </VerticalStackLayout>
-        </ScrollView>
+        </ContentView>
 
         <networkselect:MultiNetworkSelectView />
 
-       <!--QR code button-->
+        <!--QR code button-->
         <Image WidthRequest="36" Margin="10, 10, 10, 10"
                     AbsoluteLayout.LayoutBounds="1, 0, AutoSize, AutoSize"
                     AbsoluteLayout.LayoutFlags="PositionProportional"
@@ -117,5 +73,4 @@
         <navigationbar:NavigationBarView />
 
     </AbsoluteLayout>
-    
 </ContentPage>
