--- a/PlutoWallet/View/MainView.xaml
+++ b/PlutoWallet/View/MainView.xaml
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+<ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:networkselect="clr-namespace:PlutoWallet.Components.NetworkSelect"
              xmlns:addressview="clr-namespace:PlutoWallet.Components.AddressView"
              xmlns:transferview="clr-namespace:PlutoWallet.Components.TransferView"
              xmlns:connectionrequestview="clr-namespace:PlutoWallet.Components.ConnectionRequestView"
@@ -14,16 +13,8 @@
              xmlns:dappconnectionview="clr-namespace:PlutoWallet.Components.DAppConnectionView"
              xmlns:staking="clr-namespace:PlutoWallet.Components.Staking"
              xmlns:extrinsic="clr-namespace:PlutoWallet.Components.Extrinsic"
-             xmlns:navigationbar="clr-namespace:PlutoWallet.Components.NavigationBar"
-             x:Class="PlutoWallet.View.MainPage"
-             Title="Main page"
-             BackgroundColor="Black">
-
-    <AbsoluteLayout
-         AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All">
-        <Image AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All"
-               Source="space.png" Aspect="AspectFill"/>
-        <ScrollView
+             x:Class="PlutoWallet.View.MainView">
+    <ScrollView
             AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All">
 
             <VerticalStackLayout
@@ -67,55 +58,5 @@
                 <AbsoluteLayout HeightRequest="200" WidthRequest="1000"/>
             </VerticalStackLayout>
         </ScrollView>
+</ContentView>
 
-        <networkselect:MultiNetworkSelectView />
-
-       <!--QR code button-->
-        <Image WidthRequest="36" Margin="10, 10, 10, 10"
-                    AbsoluteLayout.LayoutBounds="1, 0, AutoSize, AutoSize"
-                    AbsoluteLayout.LayoutFlags="PositionProportional"
-                    Source="qrcodewhite.png"
-                    >
-            
-            <Image.GestureRecognizers>
-                <TapGestureRecognizer Tapped="OnQRClicked" />
-
-            </Image.GestureRecognizers>
-        </Image>
-
-        <!--Settings button-->
-        <Image WidthRequest="36" Margin="10, 10, 10, 10"
-                    AbsoluteLayout.LayoutBounds="0, 0, AutoSize, AutoSize"
-                AbsoluteLayout.LayoutFlags="PositionProportional"
-                Source="settingswhite.png"
-               >
-            <Image.GestureRecognizers>
-                <TapGestureRecognizer Tapped="OnSettingsClicked" />
-
-            </Image.GestureRecognizers>
-        </Image>
-
-
-        <publickeyqrcodeview:PublicKeyQRCodeView />
-
-        <transferview:TransferView x:Name="transferView" />
-
-        <connectionrequestview:ConnectionRequestView
-                                   x:Name="connectionRequestView" />
-
-        <universalscannerview:UniversalScannerView
-            x:Name="universalScannerView"
-             IsVisible="false" Opacity="0" />
-
-        
-        <transactionrequest:TransactionRequestView />
-
-        <staking:StakingRegistrationRequestView />
-        
-        <messagepopup:MessagePopupView />
-
-        <navigationbar:NavigationBarView />
-
-    </AbsoluteLayout>
-    
-</ContentPage>
