--- a/PlutoWallet/Components/CalamarView/CalamarView.xaml
+++ b/PlutoWallet/Components/CalamarView/CalamarView.xaml
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:webview="clr-namespace:PlutoWallet.Components.WebView"
              x:Class="PlutoWallet.Components.CalamarView.CalamarView">
     <Frame BackgroundColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
            BorderColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
            CornerRadius="20" x:Name="frame"
-           Padding="0"
+           Padding="10, 0, 10, 0"
            Margin="0"
            HeightRequest="650">
         <AbsoluteLayout  AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All"
@@ -18,10 +18,7 @@
                     Text="Calamar explorer"
                     FontAttributes="Bold"
                     HorizontalOptions="Center" />
-                <WebView HeightRequest="600"
-                         WidthRequest="{Binding Source={x:Reference absoluteLayout}, Path=Width}"
-                         x:Name="calamarWebView"
-                         Margin="0, 0, 0, 20"/>
+                <webview:AdvancedWebView x:Name="calamarWebView"/>
             </VerticalStackLayout>
             <Label Text="Open"
                     AbsoluteLayout.LayoutBounds="0, 0, AutoSize, 30"
