--- a/PlutoWallet/Components/Balance/BalanceDashboardView.xaml
+++ b/PlutoWallet/Components/Balance/BalanceDashboardView.xaml
@@ -3,34 +3,33 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PlutoWallet.Components.Balance.BalanceDashboardView"
              xmlns:switch="clr-namespace:PlutoWallet.Components.Switch"
-             xmlns:webview="clr-namespace:PlutoWallet.Components.WebView"
+             xmlns:card="clr-namespace:PlutoWallet.Components.Card"
              AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
              AbsoluteLayout.LayoutFlags="All"
              HeightRequest="{Binding HeightRequest}">
-    <Frame BackgroundColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
-           BorderColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
-           CornerRadius="20" x:Name="frame"
-           Padding="10, 0, 10, 0"
-           Margin="0">
-        <AbsoluteLayout HorizontalOptions="CenterAndExpand">
-            <VerticalStackLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
-                        AbsoluteLayout.LayoutFlags="All">
-                <Label 
-                    Text="Total balance"
-                    FontAttributes="Bold"
-                    HorizontalOptions="Center"
-                    HeightRequest="25"
-                    VerticalTextAlignment="Center"/>
+    <card:Card>
+        <card:Card.View>
+            <AbsoluteLayout HorizontalOptions="CenterAndExpand"
+                            >
+                <VerticalStackLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
+                            AbsoluteLayout.LayoutFlags="All">
+                    <Label 
+                        Text="Total balance"
+                        FontAttributes="Bold"
+                        HorizontalOptions="Center"
+                        HeightRequest="25"
+                        VerticalTextAlignment="Center"/>
             
-                <ContentView Content="{Binding Content}" />
-           </VerticalStackLayout>
+                    <ContentView Content="{Binding Content}" />
+               </VerticalStackLayout>
 
-           <switch:MiniDualSwitch FirstOption="Value" SecondOption="Graph"
-                                   AbsoluteLayout.LayoutBounds="1, 0, 100, 20"
-                                   AbsoluteLayout.LayoutFlags="PositionProportional"
-                                   Margin="0, 5, 0, 0"
-                                   x:Name="valueGraphSwitch"/>
-        </AbsoluteLayout>
-    </Frame>
+               <switch:MiniDualSwitch FirstOption="Value" SecondOption="Graph"
+                                       AbsoluteLayout.LayoutBounds="1, 0, 100, 20"
+                                       AbsoluteLayout.LayoutFlags="PositionProportional"
+                                       Margin="0, 5, 0, 0"
+                                       x:Name="valueGraphSwitch"/>
+            </AbsoluteLayout>
+        </card:Card.View>
+    </card:Card>
 </ContentView>
 
