--- a/PlutoWallet/Components/ConnectionRequestView/ConnectionRequestView.xaml
+++ b/PlutoWallet/Components/ConnectionRequestView/ConnectionRequestView.xaml
@@ -1,38 +1,36 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:card="clr-namespace:PlutoWallet.Components.Card"
              x:Class="PlutoWallet.Components.ConnectionRequestView.ConnectionRequestView"
              AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
              AbsoluteLayout.LayoutFlags="All"
              BackgroundColor="#66000000"
              IsVisible="{Binding IsVisible}"
              >
-    <Frame BackgroundColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
-           BorderColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
-           CornerRadius="20"
-            HorizontalOptions="Center"
-           VerticalOptions="Center">
-        <AbsoluteLayout>
-            <VerticalStackLayout>
-                <Image x:Name="icon"
-                       Source="{Binding Icon}"
-                       WidthRequest="100"
-                       HeightRequest="100" />
-                <Label 
-                    x:Name="dAppNameLabel"
-                    Text="{Binding Name}"
-                    VerticalOptions="Center"
-                    HorizontalOptions="Center" />
-                <Label 
-                    Text="Would you like to connect to this dApp?"
-                    VerticalOptions="Center"
-                    HorizontalOptions="Center" />
-                <Button Text="Accept"
-                        Clicked="AcceptClicked" />
-                <Button Text="Reject" BackgroundColor="DarkRed" TextColor="White"
-                        Clicked="RejectClicked"/>
-            </VerticalStackLayout>
-        </AbsoluteLayout>
-    </Frame>
+    <card:Card IsPopup="True">
+        <card:Card.View>
+            <AbsoluteLayout>
+                <VerticalStackLayout>
+                    <Image x:Name="icon"
+                           Source="{Binding Icon}"
+                           WidthRequest="100"
+                           HeightRequest="100" />
+                    <Label 
+                        x:Name="dAppNameLabel"
+                        Text="{Binding Name}"
+                        VerticalOptions="Center"
+                        HorizontalOptions="Center" />
+                    <Label 
+                        Text="Would you like to connect to this dApp?"
+                        VerticalOptions="Center"
+                        HorizontalOptions="Center" />
+                    <Button Text="Accept"
+                            Clicked="AcceptClicked" />
+                    <Button Text="Reject" BackgroundColor="DarkRed" TextColor="White"
+                            Clicked="RejectClicked"/>
+                </VerticalStackLayout>
+            </AbsoluteLayout>
+        </card:Card.View>
+    </card:Card>
 </ContentView>
 
