--- a/PlutoWallet/Components/DAppConnectionView/DAppConnectionView.xaml
+++ b/PlutoWallet/Components/DAppConnectionView/DAppConnectionView.xaml
@@ -1,38 +1,44 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:card="clr-namespace:PlutoWallet.Components.Card"
              x:Class="PlutoWallet.Components.DAppConnectionView.DAppConnectionView"
-             IsVisible="{Binding IsVisible}">
-    <Frame BackgroundColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
-           BorderColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
-           CornerRadius="20" HeightRequest="70"
-           Padding="0">
-        <AbsoluteLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All">
-            <Image AbsoluteLayout.LayoutBounds="10, 10, 50, 50"
-                   Source="{Binding Icon}"/>
-            <VerticalStackLayout AbsoluteLayout.LayoutBounds="70, 0, AutoSize, AutoSize">
-                <Label 
-                    Text="{Binding Name}"
-                    FontAttributes="Bold"
-                    HorizontalOptions="Start"
-                    FontSize="24"
-                    HeightRequest="40"
-                    VerticalTextAlignment="End"/>
-                <Label
-                    Text="Connected" TextColor="Green"
-                    HorizontalOptions="Start" />
-            </VerticalStackLayout>
+             IsVisible="{Binding IsVisible}"
+             HeightRequest="70"
+             >
+    <card:Card HorizontalOptions="CenterAndExpand">
+        <card:Card.View>
+            <AbsoluteLayout>
+                <AbsoluteLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All">
+                    <Image AbsoluteLayout.LayoutBounds="0, 10, 50, 50"
+                           Source="{Binding Icon}"/>
+                    <VerticalStackLayout AbsoluteLayout.LayoutBounds="70, 0, AutoSize, AutoSize">
+                        <Label 
+                            Text="{Binding Name}"
+                            FontAttributes="Bold"
+                            HorizontalOptions="Start"
+                            FontSize="24"
+                            HeightRequest="40"
+                            VerticalTextAlignment="End"/>
+                        <Label
+                            Text="Connected" TextColor="Green"
+                            HorizontalOptions="Start" />
+                    </VerticalStackLayout>
 
-            <Image Source="{AppThemeBinding Light=closeblack.png, Dark=closewhite.png}"
-                   Aspect="AspectFit"
-                   AbsoluteLayout.LayoutBounds="1, 0.5, 70, 30" AbsoluteLayout.LayoutFlags="PositionProportional">
-                <Image.GestureRecognizers>
-                    <TapGestureRecognizer Tapped="OnDisconnectClicked" />
+                    <Image Source="{AppThemeBinding Light=closeblack.png, Dark=closewhite.png}"
+                           Aspect="AspectFit"
+                           AbsoluteLayout.LayoutBounds="1, 0.5, 50, 30" AbsoluteLayout.LayoutFlags="PositionProportional">
+                        <Image.GestureRecognizers>
+                            <TapGestureRecognizer Tapped="OnDisconnectClicked" />
 
-                </Image.GestureRecognizers>
+                        </Image.GestureRecognizers>
 
-            </Image>
-        </AbsoluteLayout>
-    </Frame>
+                    </Image>
+                </AbsoluteLayout>
+
+            </AbsoluteLayout>
+            
+        </card:Card.View>
+    </card:Card>
 </ContentView>
 
