--- a/PlutoWallet/Components/Extrinsic/ExtrinsicStatusView.xaml
+++ b/PlutoWallet/Components/Extrinsic/ExtrinsicStatusView.xaml
@@ -1,44 +1,44 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:card="clr-namespace:PlutoWallet.Components.Card"
              x:Class="PlutoWallet.Components.Extrinsic.ExtrinsicStatusView"
-             IsVisible="{Binding IsVisible}">
-    <Frame BackgroundColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
-           BorderColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
-           CornerRadius="20"
-            Padding="10, 5, 10, 5"
-            HeightRequest="50">
-        <AbsoluteLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
-                        AbsoluteLayout.LayoutFlags="All">
-            <VerticalStackLayout AbsoluteLayout.LayoutBounds="0, 0, 1, 1"
-                                 AbsoluteLayout.LayoutFlags="SizeProportional">
-                <HorizontalStackLayout>
-                    <Label 
-                        x:Name="nameLabel"
-                        FontAttributes="Bold"
-                        HorizontalOptions="Start"
-                        VerticalTextAlignment="End"/>
-                    <Image Source="{AppThemeBinding Light=infoblack.png, Dark=infowhite.png}" 
-                               VerticalOptions="Center"
-                               Margin="5, 0, 0, 0"
-                               HeightRequest="15" WidthRequest="15"/>
-                </HorizontalStackLayout>
+             IsVisible="{Binding IsVisible}"
+             HeightRequest="60">
+   <card:Card>
+        <card:Card.View>
+            <AbsoluteLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
+                            AbsoluteLayout.LayoutFlags="All"
+                            Margin="0, 10, 0, 10">
+                <VerticalStackLayout AbsoluteLayout.LayoutBounds="0, 0, 1, 1"
+                                     AbsoluteLayout.LayoutFlags="SizeProportional">
+                    <HorizontalStackLayout>
+                        <Label 
+                            x:Name="nameLabel"
+                            FontAttributes="Bold"
+                            HorizontalOptions="Start"
+                            VerticalTextAlignment="End"/>
+                        <Image Source="{AppThemeBinding Light=infoblack.png, Dark=infowhite.png}" 
+                                   VerticalOptions="Center"
+                                   Margin="5, 0, 0, 0"
+                                   HeightRequest="15" WidthRequest="15"/>
+                    </HorizontalStackLayout>
                 
-                <Label
-                    x:Name="statusLabel"
-                    HorizontalOptions="Start" />
-            </VerticalStackLayout>
+                    <Label
+                        x:Name="statusLabel"
+                        HorizontalOptions="Start" />
+                </VerticalStackLayout>
 
-            <Image Source="{AppThemeBinding Light=closeblack.png, Dark=closewhite.png}"
-                   Aspect="AspectFit"
-                   AbsoluteLayout.LayoutBounds="1, 0.5, 50, 30" AbsoluteLayout.LayoutFlags="PositionProportional">
-                <Image.GestureRecognizers>
-                    <TapGestureRecognizer Tapped="OnRemoveClicked" />
+                <Image Source="{AppThemeBinding Light=closeblack.png, Dark=closewhite.png}"
+                       Aspect="AspectFit"
+                       AbsoluteLayout.LayoutBounds="1, 0.5, 50, 30" AbsoluteLayout.LayoutFlags="PositionProportional">
+                    <Image.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="OnRemoveClicked" />
 
-                </Image.GestureRecognizers>
+                    </Image.GestureRecognizers>
 
-            </Image>
-        </AbsoluteLayout>
-    </Frame>
+                </Image>
+            </AbsoluteLayout>
+        </card:Card.View>
+    </card:Card>
 </ContentView>
 
