--- a/PlutoWallet/Components/NetworkSelect/MultiNetworkSelectOptionsView.xaml
+++ b/PlutoWallet/Components/NetworkSelect/MultiNetworkSelectOptionsView.xaml
@@ -5,12 +5,15 @@
              AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
              AbsoluteLayout.LayoutFlags="All"
              BackgroundColor="#66000000">
-    <Frame BackgroundColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
-           BorderColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
-           CornerRadius="20"
+    <Border BackgroundColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
+           StrokeThickness="0"
            VerticalOptions="Start"
            HorizontalOptions="Center"
            Padding="10, 0, 10, 10">
+        <Border.StrokeShape>
+            <RoundRectangle CornerRadius="20" />
+
+        </Border.StrokeShape>
         <AbsoluteLayout AbsoluteLayout.LayoutBounds="0.5, 0, 250, 0.6"
                         AbsoluteLayout.LayoutFlags="PositionProportional, HeightProportional">
             <ScrollView AbsoluteLayout.LayoutBounds="0.5, 0, 250, 1"
@@ -25,7 +28,7 @@
             </ScrollView>
 
         </AbsoluteLayout>
-    </Frame>
+    </Border>
     <ContentView.GestureRecognizers>
         <TapGestureRecognizer Tapped="OnBackClicked" />
 
