--- a/PlutoWallet/Components/PublicKeyQRCodeView/PublicKeyQRCodeView.xaml
+++ b/PlutoWallet/Components/PublicKeyQRCodeView/PublicKeyQRCodeView.xaml
@@ -1,45 +1,42 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:zxing="clr-namespace:ZXing.Net.Maui.Controls;assembly=ZXing.Net.MAUI.Controls"
+             xmlns:zxing="clr-namespace:ZXing.Net.Maui.Controls;assembly=ZXing.Net.MAUI.Controls" xmlns:card="clr-namespace:PlutoWallet.Components.Card"
              x:Class="PlutoWallet.Components.PublicKeyQRCodeView.PublicKeyQRCodeView"
              IsVisible="{Binding IsVisible}"
              AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
              AbsoluteLayout.LayoutFlags="All"
              BackgroundColor="#66000000">
-    <Frame BackgroundColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
-           BorderColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
-           CornerRadius="20"
-           HorizontalOptions="Center"
-           VerticalOptions="Center">
-        <AbsoluteLayout>
+    <card:Card IsPopup="True">
+        <card:Card.View>
+            <AbsoluteLayout>
+                <VerticalStackLayout>
 
-            <VerticalStackLayout>
+                    <Label
+                        FontAttributes="Bold"
+                        Text="Public key"
+                        HeightRequest="30"
+                        HorizontalOptions="Center" />
 
-                <Label
-                    FontAttributes="Bold"
-                    Text="Public key"
-                    HeightRequest="30"
-                    HorizontalOptions="Center" />
+                    <zxing:BarcodeGeneratorView Format="QrCode"
+                                                ForegroundColor="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"
+                                                WidthRequest="200"
+                     HeightRequest="200" BackgroundColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
+                     Value="{Binding PublicKey}"/>
+                </VerticalStackLayout>
 
-                <zxing:BarcodeGeneratorView Format="QrCode"
-                                            ForegroundColor="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"
-                                            WidthRequest="200"
-                 HeightRequest="200" BackgroundColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
-                 Value="{Binding PublicKey}"/>
-            </VerticalStackLayout>
+                <AbsoluteLayout AbsoluteLayout.LayoutBounds="0, 0, 40, 40">
+                    <Image AbsoluteLayout.LayoutBounds="0, 0, 20, 20"
+                       Source="{AppThemeBinding Light=arrowbackblack.png, Dark=backwhite.png }" />
 
-            <AbsoluteLayout AbsoluteLayout.LayoutBounds="0, 0, 40, 40">
-                <Image AbsoluteLayout.LayoutBounds="0, 0, 20, 20"
-                   Source="{AppThemeBinding Light=arrowbackblack.png, Dark=backwhite.png }" />
+                    <AbsoluteLayout.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="OnBackClicked" />
 
-                <AbsoluteLayout.GestureRecognizers>
-                    <TapGestureRecognizer Tapped="OnBackClicked" />
+                    </AbsoluteLayout.GestureRecognizers>
 
-                </AbsoluteLayout.GestureRecognizers>
-
+                </AbsoluteLayout>
             </AbsoluteLayout>
-        </AbsoluteLayout>
-    </Frame>
+        </card:Card.View>
+    </card:Card>
 </ContentView>
 
