--- a/PlutoWallet/Components/TransactionRequest/TransactionRequestView.xaml
+++ b/PlutoWallet/Components/TransactionRequest/TransactionRequestView.xaml
@@ -1,17 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:card="clr-namespace:PlutoWallet.Components.Card"
              x:Class="PlutoWallet.Components.TransactionRequest.TransactionRequestView"
              IsVisible="{Binding IsVisible}"
              AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
              AbsoluteLayout.LayoutFlags="All"
              BackgroundColor="#66000000">
 
-    <Frame BackgroundColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
-           BorderColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
-           CornerRadius="20"
-           HorizontalOptions="Center"
-           VerticalOptions="Center">
+    <card:Card IsPopup="True">
+        <card:Card.View>
         <AbsoluteLayout>
 
             <VerticalStackLayout>
@@ -53,7 +50,8 @@
 
             </AbsoluteLayout>
         </AbsoluteLayout>
-    </Frame>
+    </card:Card.View>
+        </card:Card>
 
 </ContentView>
 
