--- a/PlutoWallet/Components/TransferView/TransferView.xaml
+++ b/PlutoWallet/Components/TransferView/TransferView.xaml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:card="clr-namespace:PlutoWallet.Components.Card"
              x:Class="PlutoWallet.Components.TransferView.TransferView"
              IsVisible="{Binding IsVisible}"
              AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
@@ -8,11 +8,8 @@
              Padding="20"
              BackgroundColor="#66000000">
     
-    <Frame BackgroundColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
-           BorderColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
-           CornerRadius="20"
-           HorizontalOptions="Center"
-           VerticalOptions="Center">
+    <card:Card IsPopup="True">
+        <card:Card.View>
         <AbsoluteLayout>
 
             <VerticalStackLayout AbsoluteLayout.LayoutBounds="0, 0, 1, AutoSize"
@@ -74,7 +71,8 @@
             </AbsoluteLayout>
         </AbsoluteLayout>
         
-    </Frame>
+    </card:Card.View>
+        </card:Card>
     
 </ContentView>
 
