--- a/PlutoWallet/Components/NetworkSelect/NetworkBubbleView.xaml
+++ b/PlutoWallet/Components/NetworkSelect/NetworkBubbleView.xaml
@@ -2,16 +2,14 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PlutoWallet.Components.NetworkSelect.NetworkBubbleView">
-    <Border
+    <Frame
+            CornerRadius="20"
             AbsoluteLayout.LayoutBounds="0.5, 0.5, AutoSize, 40"
             AbsoluteLayout.LayoutFlags="PositionProportional"
             Padding="5"
             BackgroundColor="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"
-            StrokeThickness="0">
-        <Border.StrokeShape>
-            <RoundRectangle CornerRadius="20" />
-
-        </Border.StrokeShape>
+            BorderColor="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"
+            >
         <HorizontalStackLayout x:Name="horizontalStackLayout"
                                MinimumHeightRequest="30"
                                MinimumWidthRequest="30">
@@ -27,6 +25,6 @@
                     TextColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"/>
 
         </HorizontalStackLayout>
-    </Border>
+    </Frame>
 </ContentView>
 
