--- a/PlutoWallet/Components/NetworkSelect/MultiNetworkSelectOptionView.xaml
+++ b/PlutoWallet/Components/NetworkSelect/MultiNetworkSelectOptionView.xaml
@@ -33,7 +33,10 @@
 
             </AbsoluteLayout>
             
-            
+            <Frame.GestureRecognizers>
+                <TapGestureRecognizer Tapped="OnClicked" />
+
+            </Frame.GestureRecognizers>
         </Frame>
     </AbsoluteLayout>
 </ContentView>
