--- a/PlutoWallet/View/NetworkSelectionPage.xaml
+++ b/PlutoWallet/View/NetworkSelectionPage.xaml
@@ -1,9 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:network="clr-namespace:PlutoWallet.Components.NetworkSelect"
+             xmlns:viewmodel="clr-namespace:PlutoWallet.ViewModel"
              x:Class="PlutoWallet.View.NetworkSelectionPage"
              Title="Network selection">
-    <VerticalStackLayout x:Name="verticalStackLayout">
-        
-    </VerticalStackLayout>
+    <ContentPage.BindingContext>
+        <viewmodel:NetworkSelectionPageViewModel />
+
+    </ContentPage.BindingContext>
+    <ScrollView Orientation="Vertical">
+        <VerticalStackLayout x:Name="verticalStackLayout"
+                             HorizontalOptions="CenterAndExpand"
+                             Margin="20, 0, 0, 100"
+                             Spacing="5"
+                             BindableLayout.ItemsSource="{Binding Options}">
+            <BindableLayout.ItemTemplate>
+                <DataTemplate>
+                    <network:MultiNetworkSelectOptionView Networks="{Binding Groups}" />
+
+                </DataTemplate>
+
+            </BindableLayout.ItemTemplate>
+
+            
+        </VerticalStackLayout>
+    </ScrollView>
+    
 </ContentPage>
